--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon bin/www.js"
+    "dev": "nodemon bin/www.js",
+    "prepare": "husky"
   },
   "author": "",
   "license": "ISC",
@@ -17,5 +18,8 @@
     "moment": "^2.30.1",
     "nodemon": "^3.1.4",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "husky": "^9.1.6"
   }
 }
