--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon bin/www.js",
-    "prepare": "husky"
+    "prepare": "husky",
+    "format": "npx prettier --write ."
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,16 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "husky": "^9.1.6"
+    "@eslint/js": "^9.10.0",
+    "eslint": "^9.10.0",
+    "globals": "^15.9.0",
+    "husky": "^9.1.6",
+    "prettier": "^3.3.3",
+    "pretty-quick": "^4.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
